# TrackComp

./: .gitignore  CMakeLists.txt  README.md  agregate_results.py  generate_script.py
STRUCK/: BasicConfig.hpp  CMakeLists.txt  Config.cpp  Config.h  Rect.h  Tracker.cpp  Tracker.h
src/: CMakeLists.txt  DBReader.hpp  EnumsConst.hpp  Factory.cpp  Factory.hpp  MOTReader.cpp  MOTReader.hpp  PIXReader.cpp  PIXReader.hpp  Rect.cpp  Rect.hpp  TrackMeas.cpp  TrackMeas.hpp  TrackerBasic.hpp  TrackerFactory.cpp  TrackerFactory.hpp  TrackerOpenCV.cpp  TrackerOpenCV.hpp  TrackerRe3.cpp  TrackerRe3.hpp  TrackerStruck.cpp  TrackerStruck.hpp  Trajectory.cpp  Trajectory.hpp  human.hpp  main.cpp  xmlhandler.cpp  xmlhandler.hpp
